--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,12 @@ jobs:
     - name: Run tests
       run: npm run test:coverage
 
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
+
+    - name: Run e2e tests
+      run: npm run test:e2e
+
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
