--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "lint": "eslint .",
+    "lint": "eslint \"{src,app,components,pages}/**/*.{ts,tsx}\"",
+    "lint:fix": "eslint \"{src,app,components,pages}/**/*.{ts,tsx}\" --fix",
+    "format": "prettier --write .",
     "type-check": "tsc --noEmit",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
