chore: restringe lint ao diretório src

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "lint": "eslint \"{src,app,components,pages}/**/*.{ts,tsx}\"",
-    "lint:fix": "eslint \"{src,app,components,pages}/**/*.{ts,tsx}\" --fix",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
     "format": "prettier --write .",
     "type-check": "tsc --noEmit",
     "test": "vitest",
