--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,20 +17,21 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
-        cache: 'npm'
+        node-version: '20'
+        cache: 'pnpm'
+    - run: corepack enable
 
     - name: Install dependencies
-      run: npm ci
+      run: pnpm install --frozen-lockfile
 
     - name: Type check
-      run: npm run type-check
+      run: pnpm type-check
 
     - name: Lint
-      run: npm run lint
+      run: pnpm lint
 
     - name: Run tests
-      run: npm run test:coverage
+      run: pnpm test:coverage
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
@@ -50,15 +51,17 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
-        cache: 'npm'
+        node-version: '20'
+        cache: 'pnpm'
+
+    - run: corepack enable
 
     - name: Install dependencies
-      run: npm ci
+      run: pnpm install --frozen-lockfile
 
     - name: Build
-      run: npm run build
+      run: pnpm build
 
     - name: Bundle Analysis
-      run: npm run build:analyze
+      run: pnpm build:analyze
       continue-on-error: true
