docs: add supabase secrets example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 # Exemplo de variáveis de ambiente para o Catalog Maker Hub
 # URL de redirecionamento utilizada após o cadastro no Supabase Auth (sem barra final)
 VITE_AUTH_REDIRECT_URL=http://localhost:5173
+
+# Configurações do Supabase
+VITE_SUPABASE_URL=http://localhost:54321
+VITE_SUPABASE_ANON_KEY=supabase-anon-key
+
+# Integração Mercado Livre
+VITE_ML_CLIENT_ID=seu-client-id-ml
