--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint .",
     "type-check": "tsc --noEmit",
     "test": "vitest",
+    "test:watch": "vitest watch",
+    "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
