--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "lint": "eslint .",
+    "lint": "eslint . --cache",
+    "lint:fix": "eslint . --fix --cache",
     "type-check": "tsc --noEmit",
     "test": "vitest",
     "test:watch": "vitest watch",
