--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,7 @@ jobs:
       run: npm run test:coverage
 
     - name: Check coverage threshold
-      run: |
-        node -e "const fs=require('fs');const pct=JSON.parse(fs.readFileSync('coverage/coverage-summary.json')).total.lines.pct; if(pct < 80){console.error(`Coverage ${pct}% is below 80%`); process.exit(1);}" 
+      run: node scripts/verifyCoverage.mjs
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
