feat: export zod schemas and add contract tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,9 @@ jobs:
     - name: Lint
       run: npm run lint
 
+    - name: Contract tests
+      run: npm run test:contracts
+
     - name: Run tests
       run: npm run test:coverage
 
