feat: add ML write flag and guard write operations

--- a/supabase/.env.example
+++ b/supabase/.env.example
@@ -7,3 +7,4 @@ ML_CLIENT_SECRET=seu-client-secret-ml
 # URLs utilizadas pela aplicação
 ML_REDIRECT_URL=http://localhost:5173/integrations/mercadolivre/callback
 ML_WEBHOOK_SECRET=defina-um-segredo
+ML_WRITE_ENABLED=false
