--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "prepare": "husky",
-    "align:ml": "node scripts/align-ml-data.mjs"
+    "align:ml": "node scripts/align-ml-data.mjs",
+    "build:analyze": "vite build && npx source-map-explorer 'dist/assets/*.js'"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
