--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -7,49 +7,37 @@ schemas = ["public", "storage"]
 extra_search_path = ["public", "extensions"]
 max_rows = 1000
 
+[db]
+port = 5432
+shadow_port = 54320
+major_version = 15
+
 [auth]
 enabled = true
-port = 9999
 site_url = "http://127.0.0.1:3000"
 additional_redirect_urls = ["https://127.0.0.1:3000"]
 jwt_expiry = 3600
-inactivity_timeout = 3600
-refresh_token_rotation_enabled = true
-persist_session = true
 
 [auth.email]
 enable_signup = true
 double_confirm_changes = true
 enable_confirmations = false
 
-[db]
-port = 5432
-shadow_port = 54320
-major_version = 15
+[studio]
+port = 54323
 
 [functions]
-verify_jwt = true
-
-[functions.assistants]
-verify_jwt = true
-
-[functions.generate-ad]
-verify_jwt = true
-
-[functions.generate-ad-chat]
-verify_jwt = true
+[functions.ml-sync-v2]
+verify_jwt = false
 
 [functions.ml-auth]
-verify_jwt = true
-
-[functions.ml-sync-v2]
-verify_jwt = true
+verify_jwt = false
 
 [functions.ml-token-renewal]
 verify_jwt = false
 
-[functions.ml-security-monitor]
+[functions.ml-webhook]
 verify_jwt = false
 
-[functions.ml-webhook]
+[functions.ml-security-monitor]
 verify_jwt = false
