docs: document MELI env variables

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,8 @@ VITE_SUPABASE_ANON_KEY=supabase-anon-key
 
 # Integração Mercado Livre
 VITE_ML_CLIENT_ID=seu-client-id-ml
+MELI_CLIENT_ID=seu-client-id-ml
+MELI_CLIENT_SECRET=seu-client-secret-ml
+MELI_REDIRECT_URI=http://localhost:54321/api/ml/callback
+MELI_WEBHOOK_SECRET=seu-webhook-secret
 ML_WRITE_ENABLED=false
