--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
+    "@eslint/js": "^9.35.0",
     "@storybook/addon-essentials": "^8.1.8",
     "@storybook/addon-interactions": "^8.1.8",
     "@storybook/react-vite": "^8.1.8",
@@ -113,10 +113,10 @@
     "postcss": "^8.4.47",
     "storybook": "^8.1.8",
     "tailwindcss": "^3.4.11",
+    "tsx": "^4.20.5",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1",
-    "tsx": "^4.20.5"
+    "vite": "^5.4.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
